release 0.9 (2008-08-15)
- Fixed issue where a message body reader is not correctly selected for 
  a media type that contains parameters.
- Server-side request filter for HTTP POST method replacing for proxies and
  servers that block methods other than GET/POST.
  See JavaDoc of:
  com.sun.jersey.api.container.filter.PostReplaceFilter
- Support server side request/response filters
  See JavaDoc of:
  com.sun.jersey.spi.container.ContainerRequestFilter
  com.sun.jersey.spi.container.ContainerResponseFilter
  ResourceConfig.PROPERTY_CONTAINER_REQUEST_FILTERS
  ResourceConfig.PROPERTY_CONTAINER_RESPONSE_FILTERS
- Select the constructor for a resource classe that has the most parameters
  that has the most instances are available for those parameters.
- Support constructors with parameters on singleton resource classes.
- Fixed issue 79
  https://jersey.dev.java.net/issues/show_bug.cgi?id=79
  ';' separated package names and classpaths specified in the web.xml are
  trimmed.
- Partially Integrated JSR 311 API 0.9
  - Path parameters match 1 or more characters that are not '/' 
    (previously it was zero or more of any character), unless the final 
     parameter is unlimited, in which case it is the same as before.
  - Path parameter names are matching with the following regex:
      "\{([\w[-\w\.]*)\}"
  - com.sun.jersey.api.representation.FormParam has been deleted. Use
    javax.ws.rs.FormParam instead.
  - javax.ws.rs.ConsumeMime and javax.ws.rs.ProduceMime have been renamed
    to javax.ws.rs.Consumes and javax.ws.rs.Produces respectively.
  - Resource methods may return generic types, such as List<String>, and
    an appropriate MessageBodyWriter, for that generic type may be selected.
    - When using Response.Builder an instance of javax.ws.rs.core.GenericEntity
      may be set as the entity to preserve the generic type.

release 0.8 (2008-06-20)
- UriBuilder supports opaque URIs such as "mailto:p@c".